Correct alignment of environment indicator
* Shift margins in IE7 for correct alignment
* Remove old media query, the indicator margin doesn’t need to change
at smaller widths

--- a/app/assets/stylesheets/admin/environment.scss
+++ b/app/assets/stylesheets/admin/environment.scss
@@ -8,11 +8,9 @@ $dev-color:        $grey-2;
   font-weight: bold;
   font-size: 16px;
   margin: -4px 0 8px 0;
-}
 
-@media (max-width: 767px) {
-  .environment-message {
-    margin-left: 10px;
+  @include ie-lte(7) {
+    margin: 0;
   }
 }
 
